# 26-WrightEagle.AI-MHRC-planning

./: .env.example  .gitignore  ARCHITECTURE.md  GUIDELINE.md  IMPORT_FIX_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  TODO.md  TODO_V2.md  codebase.md  compare_modes.py  config.py  config_local.example.py  config_local.py  config_local_example.py  demo_navigate.py  demo_retry.py  main.py  main_ros.py  requirements.txt  robot_controller.py  setup.sh  task.md  test_me.sh  test_no_thought.py
.omc/: project-memory.json
body/: mock_robot.py  robot.py  robot_bak_1.py  robot_interface.py  voice_robot.py
brain/: llm_client.py  prompts.py  schemas.py
bridge/: __init__.py  ros_voice_bridge.py
cade_ws/: .env.example  README.md  start_cade.sh
cade_ws/src/cade_brain/: CMakeLists.txt  package.xml  setup.py
cade_ws/src/cade_brain/scripts/: brain_node.py
cade_ws/src/cade_brain/src/cade_brain/: controller.py  memory.py
cade_ws/src/cade_brain/src/cade_brain/llm_core/: llm_client.py  schemas.py
cade_ws/src/cade_brain/src/cade_brain/skills/: base_skill.py  nav_skill.py  vision_skill.py
cade_ws/src/cade_voice/: CMakeLists.txt  package.xml  requirements.txt  setup.py
cade_ws/src/cade_voice/launch/: cade_voice.launch  speech.launch  voice.launch
cade_ws/src/cade_voice/scripts/: asr_node.py  dynamic_vad_asr_node.py  dynamic_vad_streaming_asr_node.py  streaming_asr_endpoint_node.py  tts_node.py  vad_streaming_asr_node.py  voice_bridge_node.py
cade_ws/src/cade_voice/test/: _debug_results.json  all_test_results.json  requirements.txt  run_all_tests.py  test_online_asr.py  test_tts.py  voice_compare.py
cade_ws/src/cade_voice/test/lab_test_scripts/: README.md  __init__.py  robot_env_probe.py
demo/: demo_navigate.py  demo_retry.py
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
docs/: COMPACT_MODE_GUIDE.md  DEPLOYMENT_QWEN3.md  HOW_ROBOT_UNDERSTANDS.md  LLM_RETRY_MECHANISM.md  NO_THOUGHT_MODE.md
scripts/: gen_test_audio.py  setup_virtual_audio.sh
src/: CMakeLists.txt  config.py  (+3 more)
(+88 files in other folders)
